--- a/index.html
+++ b/index.html
@@ -5,14 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Agustin Baza" />
-    <meta name="keywords" content="javascript pagina, practica, dom, ejercicios" />
+    <meta
+      name="keywords"
+      content="javascript pagina, practica, dom, ejercicios"
+    />
     <meta name="Description" content="Punto 1 - TP5" />
     <link rel="icon" href="./img/javascript_icon_130900.ico" />
-    
-    <title>PUNTO 1 - TP5 </title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
 
+    <title>PUNTO 1 - TP5</title>
   </head>
+
   <body>
+    <header>
+      <div>
+        <h6 class="text-center bg-black text-white navbar">
+          EJERCICIO 1 - TP5
+        </h6>
+      </div>
+    </header>
+
+    <main>
+      <div class="text-center">
+        <h2 class="contenedores">ADIVINA ADIVINADOR</h2>
+        <hr />
+        <h4 class="contenedores">Reglas de juego:</h4>
+        <p class="espacio">
+          <b>1-</b> Ingrese un número que considere ganador.
+        </p>
+        <p class="espacio">
+          <b>2-</b> Si no ganó, ingrese otro número siguiendo las pistas.
+        </p>
+        <p class="espacio">
+          <b>3-</b> Repita los pasos hasta llegar al número ganador.
+        </p>
+        <button class="btn btn-dark contenedores">Comenzar el juego</button>
+      </div>
+    </main>
+
+    <footer class="text-center">&copy; Creado por Agustin Baza</footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
